force-app/main/default/objects/Timestamp_Config__mdt.object
<CustomObject>
    <description>Timestamp logs config based on object and fields.</description>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Flag to check if creation of log is active</description>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Business_Hours_Name__c</fullName>
        <description>Business Hours Name setup. If not populated and business hours or holidays are excluded then it will be going to Default</description>
        <label>Business Hours Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Exclude_Non_Business_Hours__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Exclude business hours in time difference calculation.</description>
        <label>Exclude Non-Business Hours</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Field_API_Name__c</fullName>
        <description>Field API Name to calculate. e.g. Workflow_Status__c</description>
        <label>Field API Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Object_API_Name__c</fullName>
        <description>Object API Name e.g. Application_Course_Preference__c</description>
        <label>Object API Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Unit__c</fullName>
        <description>Turn around calculation unit.</description>
        <label>Unit</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Hours</fullName>
                    <default>true</default>
                    <label>Hours</label>
                </value>
                <value>
                    <fullName>Days</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Timestamp Config</label>
    <pluralLabel>Timestamp Config</pluralLabel>
</CustomObject>